# example-axum-graphql

./: Cargo.toml  README.md
src/: main.rs
src/customer/: mod.rs  model.rs
