[package]
name = "example-axum-graphql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "3.0.38"
axum = "0.5.4"
tokio = { version = "1.18.0", features = ["full"] }
slab = "0.4.6"
uuid = { version = "1.0.0", features = ["v4"] }
